# libzbxpgsql

./: .gitignore  .travis.yml  COPYING  ChangeLog  Dockerfile  Makefile  Makefile.am  README-STREAMING.md  README.md  Vagrantfile  _config.yml  about.md  autogen.sh  build.md  configure.ac  index.md  libzbxpgsql.spec  libzbxpgsql.spec.rpkg  package-rpm.sh  query.conf  rpkg.macros  template_postgresql_server.xml  zabbix_agent_bench.keys
_data/: downloads.yaml  menu.yaml  server_keys.yaml
_data/keys/: categories.yaml  database.yaml  index.yaml  namespace.yaml  query.yaml  schema.yaml  server.yaml  table.yaml  tablespace.yaml
_docs/: about.md  agent-keys.md  build.md  connecting-to-postgresql.md  connection-pooling.md  database-keys.md  documentation.md  download.md  index-keys.md  installation.md  known-issues.md  local-monitoring-agent.md  module-installation.md  module-keys.md  namespace-keys.md  query-keys.md  release-notes.md  remote-monitoring-agent.md  schema-keys.md  server-keys.md  system-requirements.md  table-keys.md  tablespace-keys.md  template-configuration.md  template-installation.md  template.md  troubleshooting.md
_includes/: footer.html  header.html  keys.html
_layouts/: default.html
_sass/: _base.scss  _layout.scss
conf/: libzbxpgsql-streaming.conf  libzbxpgsql.conf
docker/: Dockerfile  README.md  entrypoint.sh  monitrc  package.sh  start.sh  start_postgresql.sh  stop_postgresql.sh  test.sh
docker/centos-5/rpmbuild/: Dockerfile  Makefile  entrypoint.sh  package.sh
docker/centos-5/zabbix-2.2/: Dockerfile  Makefile  entrypoint.sh
docker/centos-6/rpmbuild/: Dockerfile  Makefile  entrypoint.sh
docker/centos-6/zabbix-2.2/: Dockerfile  Makefile
docker/centos-6/zabbix-2.4/: Dockerfile  Makefile  entrypoint.sh
docker/centos-7/rpmbuild/: Dockerfile  Makefile  entrypoint.sh  make_dist.sh
docker/centos-7/zabbix-2.2/: Dockerfile  Makefile  entrypoint.sh
docker/centos-7/zabbix-2.4/: Dockerfile  Makefile
docker/centos6/: entrypoint.sh  package.sh
docker/centos7/: Dockerfile  entrypoint.sh  package.sh
docker/opensuse/: Dockerfile  entrypoint.sh  package.sh
docker/opensuse-13.2/rpmbuild/: Dockerfile  Makefile  entrypoint.sh
docker/opensuse-13.2/zabbix-2.2/: Dockerfile  Makefile  entrypoint.sh
docker/ubuntu-12/debuild/: Dockerfile  Makefile  entrypoint.sh
docker/ubuntu-12/zabbix-2.2/: Dockerfile  Makefile  entrypoint.sh
docker/ubuntu-14/zabbix-2.2/: Dockerfile  Makefile
docker/ubuntu-14/zabbix-2.4/: Dockerfile  Makefile
fixtures/: postgresql-8.4.keys  postgresql-9.0.keys  postgresql-9.1.keys  postgresql-9.2.keys  postgresql-9.4.keys  postresql-9.2.keys  tmp.keys
include/: version.h
m4/: ax_lib_postgresql.m4  ax_lib_zabbix.m4  ax_prog_git.m4
packaging/debian/: changelog  control  copyright  install  libzbxpgsql.conf  postinst  rules
packaging/rpmbuild/: libzbxpgsql.spec
sql/: replication_pump_func.sql
src/: Makefile.am  config.c  libzbxpgsql.c  libzbxpgsql.h  pg_backends.c  pg_bgwriter.c  pg_config.c  pg_connect.c  pg_database.c  pg_discovery.c  pg_index.c  pg_namespace.c  pg_params.c  pg_query.c  pg_query2.c  pg_server.c  pg_setting.c  pg_table.c  pg_tablespace.c
templates/: Makefile  Template_PostgreSQL_Server_2.0.xml  Template_PostgreSQL_Server_2.4.xml  Template_PostgreSQL_Server_3.0.xml  Template_PostgreSQL_Server_3.0_Secondary.xml  Template_PostgreSQL_Server_3.0_Streaming.xml  Template_PostgreSQL_Server_3.0_Streaming_Secondary.xml
vagrant/: setup_centos6.sh  setup_centos7.sh  setup_ubuntu12.sh
